fixed bug where text becomes invisible

--- a/HomeChefInspiration/public/stylesheets/style.css
+++ b/HomeChefInspiration/public/stylesheets/style.css
@@ -52,7 +52,6 @@ p#playlistSuccessMsg{
   width: 1400px;
   height: 30px;
   border: 4px solid #FF745E;
-  color: #fff;
   cursor: pointer;
   font-size: 1.4rem;
   letter-spacing: 3px;
